graphing flock sizes

--- a/dispersing_model.ipynb
+++ b/dispersing_model.ipynb
@@ -352,6 +352,8 @@
     }
    ],
    "source": [
+    "Nt = 200  # number of time steps\n",
+    "\n",
     "# Define a range of drone numbers\n",
     "drone_numbers = range(1, 10)\n",
     "\n",
