--- a/attracting_model_final.ipynb
+++ b/attracting_model_final.ipynb
@@ -16,7 +16,7 @@
     "L = 500  # Size of the domain\n",
     "v_max = 60  # Maximum velocity\n",
     "R = 50  # Observation range\n",
-    "# New avoidance radi\n",
+    "\n",
     "r_free = 5  # Minimum distance to maintain for free birds\n",
     "r_stuck = 3  # Minimum distance to maintain for stuck birds\n",
     "lambda_c = 0.1  # Strength of the centering behavior\n",
@@ -32,13 +32,13 @@
     "vd = 60  # Velocity of the drone\n",
     "Rd = 75  # Radius of influence of the drone\n",
     "\n",
-    "# Initialize birds\n",
+    "# Initializing birds\n",
     "def initialize_birds(N, L):\n",
     "    positions = np.random.rand(N, 2) * L\n",
     "    velocities = (np.random.rand(N, 2) - 0.5) * v_max\n",
     "    return positions, velocities\n",
     "\n",
-    "# Initialize drones\n",
+    "# Initializing drones\n",
     "def initialize_drones(Nd, L):\n",
     "    # Initialize the drone at (250, 0) with zero velocity\n",
     "    x = np.array([0] * Nd)\n",
@@ -49,7 +49,7 @@
     "# Initialize drone positions and velocities\n",
     "drone_x, drone_y, drone_vx, drone_vy = initialize_drones(Nd, L)\n",
     "\n",
-    "# Define functions for the algorithm steps\n",
+    "# Calculate the centre of maxx\n",
     "def centre_of_mass(positions, i, R):\n",
     "    neighbors = positions[np.linalg.norm(positions - positions[i], axis=1) < R]\n",
     "    if len(neighbors) == 0: return np.zeros(2)\n",
@@ -86,11 +86,10 @@
     "        return (velocity / speed) * v_max\n",
     "    return velocity\n",
     "\n",
-    "# Your version of update_drones\n",
     "def update_drones(drone_x, drone_y, drone_vx, drone_vy, x, y, L, vd, dt, stuck_birds, Rd, N, in_target_area, horizontal_movement_direction):\n",
     "    Nd = len(drone_x)  # Number of drones\n",
     "    target_x = 50 if horizontal_movement_direction == 1 else 450\n",
-    "    horizontal_end = 450  # End position for the horizontal movement\n",
+    "    horizontal_end = 450 \n",
     "    velocity_change_factor = 0.2  # Increase smoothing factor for velocity change\n",
     "\n",
     "    for i in range(Nd):\n",
@@ -195,7 +194,6 @@
     "    plt.ylim(0, L)\n",
     "\n",
     "    # Draw and label the target area as a grey square\n",
-    "     # Draw the target area as a grey rectangle\n",
     "    plt.gca().add_patch(plt.Rectangle((0, 0), 500, 100, fill=True, color='grey', alpha=0.3, label='Target Area'))\n",
     "\n",
     "    num_stuck_birds = len(stuck_birds)\n",
@@ -470,7 +468,7 @@
     "Nt = 200  # Number of time steps\n",
     "\n",
     "def is_in_target_area(position):\n",
-    "    # Define the target area\n",
+    "    # Defining the target area\n",
     "    target_x_min, target_x_max = 0, 500\n",
     "    target_y_min, target_y_max = 0, 100\n",
     "    return (position[0] >= target_x_min) & (position[0] <= target_x_max) & (position[1] >= target_y_min) & (position[1] <= target_y_max)\n",
