final changesn again

--- a/Final_Attracting_Model.ipynb
+++ b/Final_Attracting_Model.ipynb
@@ -16,7 +16,7 @@
     "L = 500  # Size of the domain\n",
     "v_max = 60  # Maximum velocity\n",
     "R = 50  # Observation range\n",
-    "# New avoidance radi\n",
+    "\n",
     "r_free = 5  # Minimum distance to maintain for free birds\n",
     "r_stuck = 3  # Minimum distance to maintain for stuck birds\n",
     "lambda_c = 0.1  # Strength of the centering behavior\n",
@@ -86,7 +86,7 @@
     "        return (velocity / speed) * v_max\n",
     "    return velocity\n",
     "\n",
-    "# Your version of update_drones\n",
+    "\n",
     "def update_drones(drone_x, drone_y, drone_vx, drone_vy, x, y, L, vd, dt, stuck_birds, Rd, N, in_target_area, horizontal_movement_direction):\n",
     "    Nd = len(drone_x)  # Number of drones\n",
     "    target_x = 50 if horizontal_movement_direction == 1 else 450\n",
@@ -146,7 +146,7 @@
     "\n",
     "\n",
     "def update_birds(positions, velocities, R, r_free, r_stuck, v_max, drone_x, drone_y, vd, dt, Rd, stuck_birds, L, attraction_strength):\n",
-    "    delay_factor = 20  # Adjust for more or less delay\n",
+    "    delay_factor = 20  \n",
     "    drone_avoidance_distance = 2  # Minimum distance to maintain from the drone\n",
     "\n",
     "    for i in range(N):\n",
@@ -195,7 +195,6 @@
     "    plt.ylim(0, L)\n",
     "\n",
     "    # Draw and label the target area as a grey square\n",
-    "     # Draw the target area as a grey rectangle\n",
     "    plt.gca().add_patch(plt.Rectangle((0, 0), 500, 100, fill=True, color='grey', alpha=0.3, label='Target Area'))\n",
     "\n",
     "    num_stuck_birds = len(stuck_birds)\n",
